<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light200"
    tools:context=".presentation.fragment.CityWeatherFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp">

            <TextView
                android:id="@+id/tv_humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_humidity_text"/>

            <TextView
                android:id="@+id/tv_temp_feelsLike_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feelsLike"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity_text"/>

            <TextView
                android:id="@+id/tv_temp_feelsLike_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_temp_feelsLike_text"/>


            <TextView
                android:id="@+id/tv_windSpeed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp_feelsLike_text"/>

            <TextView
                android:id="@+id/tv_windSpeed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_windSpeed_text"/>

            <TextView
                android:id="@+id/tv_windDeg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windDeg"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_windSpeed_text"/>

            <TextView
                android:id="@+id/tv_windDeg_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_windDeg_text"/>

            <TextView
                android:id="@+id/tv_seaLevel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seaLevel"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_windDeg_text"/>

            <TextView
                android:id="@+id/tv_seaLevel_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_seaLevel_text"/>

            <TextView
                android:id="@+id/tv_grndLevel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grndLevel"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_seaLevel_text"/>

            <TextView
                android:id="@+id/tv_grndLevel_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_grndLevel_text"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>